[package]
name = "isabelle-core"
version = "1.15.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-files = "0.6.6"
actix-identity = "0.6.0"
actix-jwt-auth-middleware = "0.5.0"
actix-multipart = "0.6.1"
actix-rt = "2.10.0"
actix-session = { version = "0.8", features = ["cookie-session"] }
actix-web = { version = "4", features = ["cookies", "rustls-0_23" ] }
apistos = { version = "0.6.0", features = ["query", "actix-web-grants", "chrono", "extras", "garde", "lab_query", "multipart", "qs_query", "rapidoc", "redoc", "rust_decimal", "scalar", "swagger-ui", "url", "uuid"] }
argon2 = "0.5.2"
async-trait = "0.1.74"
bson = { version = "2.9.0", features = ["serde_with"] }
chrono = "0.4.26"
clap = { version = "4.5.23", features = ["derive"] }
cron = "0.12.1"
env_logger = "0.8.4"
futures-util = "0.3.29"
isabelle-dm = { "git" = "https://github.com/isabelle-platform/isabelle-dm", tag = "1.9.0" }
isabelle-plugin-api = { "git" = "https://github.com/isabelle-platform/isabelle-plugin-api", tag = "1.19.0" }
lazy_static = "1.4.0"
lettre = { version = "0.11.11", features = ["rustls-tls", "smtp-transport", "pool", "hostname", "builder"], default-features = false }
log = "0.4.0"
mongodb = { version = "3.1.1" }
now = "0.1.3"
parking_lot = "0.12.1"
rand = "0.8.5"
sanitize-filename = "0.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.96"
serde_qs = "0.12.0"
threadpool = "1.8.1"
tokio = { version = "1.37.0" }
uuid = "1.10.0"

[features]
full_file_database = []
